[gd_scene load_steps=4 format=3 uid="uid://bj6g0500uiwnr"]

[ext_resource type="Texture2D" uid="uid://d3aq5m0cwhyka" path="res://levels/biomes/easi/maps/institute/institute_preview.png" id="1_4bqrk"]
[ext_resource type="Script" path="res://ui/hideout/level_card.gd" id="1_4mi8x"]
[ext_resource type="Texture2D" uid="uid://c7mqojhjkgdj1" path="res://ui/icons/White/crosshair_11.png" id="2_kxrci"]

[node name="LevelCard" type="MarginContainer"]
offset_right = 256.0
offset_bottom = 400.0
mouse_default_cursor_shape = 2
script = ExtResource("1_4mi8x")

[node name="SelectionTexture" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_kxrci")
draw_center = false
region_rect = Rect2(5, 5, 22, 22)
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 13
patch_margin_bottom = 13

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "placeholder"
uppercase = true

[node name="PreviewTextureRect" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_4bqrk")

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="BiomeLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "placeholder"
uppercase = true

[node name="SizeLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 10
text = "placeholder"
uppercase = true

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah "
autowrap_mode = 2
uppercase = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
